[metadata]
name = SimpleCellRes
description-file = README.md
description = Module for simple cell-based resampling of multiple dimensional regions
author = Hitham Hassan
license = GPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages =
    EventPlotter
install_requires =
    matplotlib>=3.0
    numpy>=0.1
    dataclasses>=0.4
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9

[options.package_data]
EventPlotter = py.typed

[flake8]
max-line-length = 140
